<resources>
    <string name="app_name">TestingHumbergerProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nurtilekg11_gmail_com">nurtilekg11@gmail.com</string>
    <string name="skillet">SKILLET</string>
    <string name="monster">Monster</string>
    <string name="hero">Hero</string>
    <string name="save_me">Save Me</string>
    <string name="awake_and_alive">Awake and Alive</string>
</resources>